@@ -15,13 +15,13 @@
 //
 // COURSE REQUEST MANAGER BLOCK FOR MOODLE
 // by Kyle Goslin & Daniel McSweeney
-// Copyright 2012-2014 - Institute of Technology Blanchardstown.
+// Copyright 2012-2018- Institute of Technology Blanchardstown.
 // --------------------------------------------------------- 
 /**
  * COURSE REQUEST MANAGER
   *
  * @package    block_cmanager
- * @copyright  2014 Kyle Goslin, Daniel McSweeney
+ * @copyright  2018 Kyle Goslin, Daniel McSweeney
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
@@ -29,8 +29,8 @@ require_once("../../config.php");
 global $CFG, $DB;
 
 
-$type = $_POST['type'];
-	
+
+$type = required_param('type', PARAM_TEXT);
 
 if ($type == 'del') {
     $values = $_POST['values'];
@@ -51,8 +51,8 @@ if ($type == 'del') {
  */
 if ($type == 'updatefield') {
      
-    $post_value = addslashes(required_param('value', 'PARAM_TEXT'););
-    $post_id = addslashes(required_param('id', 'PARAM_TEXT'););
+    $post_value = required_param('value', PARAM_TEXT);
+    $post_id = required_param('id', PARAM_TEXT);
   	
     $selectQuery = "varname = '$post_id'";
   	$recordExists = $DB->record_exists_select('block_cmanager_config', $selectQuery);
@@ -80,8 +80,8 @@ if ($type == 'updatefield') {
 }
 
 if ($type == 'updatecategory') {
-      $value = $_POST['value'];
-	  $recId = $_POST['recId'];
+      $value = required_param('value', PARAM_TEXT);
+	  $recId = required_param('recId', PARAM_TEXT);
 	  $newrec = new stdClass();
 	  $newrec->id = $recId;
 	  $newrec->cate = $value;
